# setuptools_issue_2492

./: .gitignore  Makefile  README.md  code.yaml  test.mk
using_setup_cfg/: setup.cfg  setup.py
using_setup_py/: setup.cfg  setup.py
using_setup_py/example_pkg/: __init__.py
