[metadata]
name = example_pkg
version = attr: example_pkg.__version__
author = Alex Nelson
author_email = alexander.nelson@nist.gov
description = An example package demonstrating a bug
url = https://github.com/ajnelson-nist/setuptools_issue_2492
classifiers = 
    License :: Public Domain
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.6
